// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render when text of no Question found removes 1`] = `
<div
  className="flex flex-col even:float-right mb-12 w-10/12 h-28 truncate"
>
  <div
    className="bg-[#F0F0F0] group relative bg-gray-100  rounded-lg px-5 py-4"
  >
    <div
      className="flex justify-between items-center mb-2"
    >
      <div
        className="flex items-center  "
      >
        <a
          href="/user-profile"
        >
          <img
            alt="s profile pic"
            className="w-16 rounded-full mr-24"
          />
        </a>
        <a
          href="/question:id"
        >
          <div
            className="font-medium text-black truncate w-[51rem] "
          >
            <span
              className="text-orange"
            >
              Q
            </span>
            : 
          </div>
          <div
            className="font-medium text-[#C4C4C4] truncate w-[52rem]"
          >
            <span
              className="text-orange ml-4"
            >
              A
            </span>
            : 
          </div>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`Render when text of no Question found removes 2`] = `
<div
  className="flex flex-col even:float-right mb-12 w-10/12 h-28 truncate"
>
  <div
    className="bg-[#F0F0F0] group relative bg-gray-100  rounded-lg px-5 py-4"
  >
    <div
      className="flex justify-between items-center mb-2"
    >
      <div
        className="flex items-center  "
      >
        <a
          href="/user-profile"
        >
          <img
            alt="s profile pic"
            className="w-16 rounded-full mr-24"
            src="none"
          />
        </a>
        <a
          href="/question:id"
        >
          <div
            className="font-medium text-black truncate w-[51rem] "
          >
            <span
              className="text-orange"
            >
              Q
            </span>
            : 
            2+2=?2*2
          </div>
          <div
            className="font-medium text-[#C4C4C4] truncate w-[52rem]"
          >
            <span
              className="text-orange ml-4"
            >
              A
            </span>
            : 
            Yes
          </div>
        </a>
      </div>
    </div>
  </div>
</div>
`;
